--- a/inicio.html
+++ b/inicio.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Homerun Roleplay v0.0.8</title>
+	<title>Homerun Roleplay Inicio</title>
 	<meta charset="utf-8">
  	<meta name="keywords" content="homerun, roleplay, gta sa, gta samp, samp, san andreas multiplayer, servidor de roleplay samp, homerun roleplay, samp roleplay, argentina, samp argentina, roleplay argentina, roleplay latino, samp latam,">
     <meta name="description" content="Servidor de roleplay latino de GTA SAN ANDREAS MULTIPLAYER">
     <meta name="author" content="Zackerr">
     <meta name="copyright" content="Homerun Roleplay">
     <meta name="robots" content="index">
-	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<link rel="stylesheet" type="text/css" href="css/inicio.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
@@ -18,20 +18,41 @@
 	<link rel="icon" href="images/homerun.ico">
 </head>
 <body>
-
-	<div id="container">
+		<div id="container">
+		
 		<header>
 			<h1 class="h1header">Bienvenidos a Homerun Roleplay</h1>
-					<nav>
+				</header>
 
+		<nav>
 			<ul>
-			<li><a class="li1" href="inicio.html">Inicio</a></li>
+			<li><a class="li1" href="index.html">Inicio</a></li>
 			<li><a class="li2" href="reportes.html">Reporta a un usuario</a></li>
-			<li><a class="li3" href="inicio.html #notas">Notas de actualizacion</a></li>
+			<li><a class="li3" href="#notas">Notas de actualizacion</a></li>
 			</ul>
 				</nav>
-			</div>
-			</header>
+
+			<div class="clearfix"></div>
+<br>
+		<section id="content">
+			<article class="article">
+				<h2 class="h2article">¿Que es Homerun Roleplay?</h2>
+				<p class="particle">Homerun Roleplay es un servidor de <b>SAMP (San Andreas Multiplayer)</b> orientado a inventar nuestra propia vida dentro del juego y hacer lo que mas deseemos desde tener una mafia, ser ladron, policia, entre otras cosas. Cabe aclarar que el servidor aun esta en fase de desarrollo para mas informacion puedes ingresar a nuestro <b>DISCORD</b> <a href="https://discord.gg/76BjJ8NRQb" target="_BLANK">(click aca)</a>
+				</p> <br>
+			    
+			    <h2 id="notas">Notas de actualizacion</h2>
+				<p>Informate de todas las nuevas implementaciones al servidor (proximamente)</p>
+					</article>
+						</section>
+
+
+		<aside>
+			<h3>Lista de donadores</h3>
+			<form>
+				<li>Haitiano Blanco</li>
+				</form>
+					</aside>
+
 			<div class="clearfix"></div>
 
 		<footer>
@@ -41,8 +62,6 @@
 
 
 
-
-
-
+				</div>
 </body>
 </html>
