--- a/reportes.html
+++ b/reportes.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Reportes Homerun</title>
-	<link rel="stylesheet" type="text/css" href="css/reportes.css">
+	<title>Homerun Roleplay Inicio</title>
 	<meta charset="utf-8">
  	<meta name="keywords" content="homerun, roleplay, gta sa, gta samp, samp, san andreas multiplayer, servidor de roleplay samp, homerun roleplay, samp roleplay, argentina, samp argentina, roleplay argentina, roleplay latino, samp latam,">
     <meta name="description" content="Servidor de roleplay latino de GTA SAN ANDREAS MULTIPLAYER">
     <meta name="author" content="Zackerr">
     <meta name="copyright" content="Homerun Roleplay">
     <meta name="robots" content="index">
+	<link rel="stylesheet" type="text/css" href="css/reportes.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
@@ -18,51 +18,46 @@
 	<link rel="icon" href="images/homerun.ico">
 </head>
 <body>
+		<div id="container">
+		
+		<header>
+			<h1 class="h1header">Bienvenidos a Homerun Roleplay</h1>
+				</header>
 
-	<div id="container">
-
-	<header>
-		<h1 class="h1header">Bienvenidos a Homerun Roleplay</h1>
-			</header>
-
-		<nav id="nav1">
+		<nav>
 			<ul>
-			<li><a href="index.html">Inicio</a></li>
-			<li><a href="reportes.html">Reporta a un usuario</a></li>
-			<li><a href="index.html#notas">Notas de actualizacion</a></li>
+			<li><a class="li1" href="index.html">Inicio</a></li>
+			<li><a class="li2" href="reportes.html">Reporta a un usuario</a></li>
+			<li><a class="li3" href="inicio.html #notas">Notas de actualizacion</a></li>
 			</ul>
 				</nav>
-				</div>
-	<div>
-				<section id="content">
+
+			<div class="clearfix"></div>
+<br>
+		<section id="content">
 			<article class="article">
-				<h2 class="h2article">En desarrollo.</h2>
-				<p class="particle"><b>INGRESA A NUESTRO DISCORD PARA MAS INFORMACION</b> <a id="adiscord" href="https://discord.gg/76BjJ8NRQb" target="_BLANK">(click aca)</a>
-				</p>
+				<h2 class="h2article">EN DESARROLLO</h2>
+				<p class="particle"><b>ENTERATE DE TODAS LAS ACTUALIZACIONES EN NUESTRO DISCORD</b> <a href="https://discord.gg/76BjJ8NRQb" target="_BLANK">(click aca)</a>
+				</p> <br>
 			    
+			   <h2 id="notas">Informate en nuestro discord</h2>
+				<p>El servidor y la pagina estan en constante cambio, para enterarte de las nuevas actualizaciones puedes entrar a nuestro discord</p>
 					</article>
 						</section>
-</div>
-
-<div>
-	<aside>
-			<h3>Lista de donadores</h3>
-			<form>
-				<li>Haitiano Blanco</li>
-				</form>
-					</aside>
 
 
-</div>
-		<div class="clearfix"></div>
+	
 
-		<div>
-			
-			<footer>
-			Homerun Roleplay &copy 2021 || Version  Beta 0.0.1
+
+			<div class="clearfix"></div>
+
+		<footer>
+			Homerun Roleplay &copy 2021 || Version  Beta 0.0.8
+
 				</footer>
-		</div>
 
-		
+
+
+				</div>
 </body>
 </html>
