Cambios en el codigo

--- a/reportes.html
+++ b/reportes.html
@@ -28,7 +28,7 @@
 			<ul>
 			<li><a class="li1" href="index.html">Inicio</a></li>
 			<li><a class="li2" href="reportes.html">Reporta a un usuario</a></li>
-			<li><a class="li3" href="inicio.html #notas">Notas de actualizacion</a></li>
+			<li><a class="li3" href="inicio.html">Notas de actualizacion</a></li>
 			</ul>
 				</nav>
 
